<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPurple"
            android:textSize="33sp"
            android:text="@string/welcome" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_margin="80dp"
        android:contentDescription="@string/welcome_photo"
        android:cropToPadding="false"
        app:srcCompat="@drawable/gym" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        app:backgroundTint="@color/colorPurple"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already" />

        <TextView
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/signin"
            android:textColor="#123456" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
