<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp">

    <RelativeLayout

        android:layout_width="match_parent"
        android:background="@color/colorLightPurple"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_android"/>

        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal"
            android:layout_toEndOf="@+id/image_view"
            android:textColor="#555555"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_"
            android:layout_toEndOf="@id/image_view"
            android:textColor="#555555"
            android:layout_below="@id/text_view_1"/>

        <TextView
            android:id="@+id/text_view_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:layout_toEndOf="@id/text_view_2"
            android:textColor="#555555"
            android:layout_below="@id/text_view_1"/>

        <TextView
            android:id="@+id/text_view_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cal_"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/text_view_3"
            android:textColor="#555555"
            android:layout_below="@id/text_view_1"/>

        <TextView
            android:id="@+id/text_view_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cal"

            android:layout_toEndOf="@id/text_view_4"
            android:textColor="#555555"
            android:layout_below="@id/text_view_1"/>


    </RelativeLayout>
</androidx.cardview.widget.CardView>