<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MyGoalActivity">



    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_height="100dp"
        android:layout_width="380dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="center"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="#BAF0DEFF">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/calendar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="15dp"
            android:text="@string/days_remaining"
            android:textColor="#555555"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="80dp">

            <TextView
                android:id="@+id/mygoal_dayData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/day" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/days" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_height="100dp"
        android:layout_width="380dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="center"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="#BAF0DEFF">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/weight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="15dp"
            android:text="@string/my_goal_weight"
            android:textColor="#555555"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="80dp">

            <TextView
                android:id="@+id/mygoal_weightData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/weight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/kg" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_height="100dp"
        android:layout_width="380dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="center"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="#BAF0DEFF">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/meal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="15dp"
            android:text="@string/nutrition"
            android:textColor="#555555"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="80dp">

            <TextView
                android:id="@+id/mygoal_calData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/weight" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/cal" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_height="100dp"
        android:layout_width="380dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="center"
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="#BAF0DEFF">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/water" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="15dp"
            android:text="@string/water"
            android:textColor="#555555"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/_8_glasses_" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="25dp">

        <ImageButton
            android:id="@+id/mygoal_homeBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:src="@drawable/home_button" />
        <ImageButton
            android:id="@+id/mygoal_bookBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:src="@drawable/book_button" />
        <ImageButton
            android:id="@+id/mygoal_addBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_gravity="right"
            android:src="@drawable/plus_button" />
        <ImageView
            android:id="@+id/home_mygoalBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:src="@drawable/mountain" />
        <ImageButton
            android:id="@+id/mygoal_profileBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_gravity="left"
            android:src="@drawable/profile_button" />
    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>