<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".ExerciseActivity">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_height="100dp"
        android:layout_width="380dp"
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="center"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#BAF0DEFF">
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/exercise" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/add_exercise"
            android:textColor="#555555"
            android:textSize="30sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/exercise_img"
        android:layout_marginTop="100dp"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/exercise_addimg"
        android:layout_gravity="center"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/upload_img" />
    <TextView
        android:id="@+id/text_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/add_custom_photo"
        android:layout_marginBottom="45dp"
        android:textColor="#123456"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <EditText
            android:layout_gravity="center_horizontal"
            android:id="@+id/exercise_menuEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/activity"
            android:inputType="text"
            android:autofillHints="activity" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

        <EditText
            android:layout_gravity="center_horizontal"
            android:id="@+id/exercise_calEditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/calories"
            android:inputType="number"
            android:autofillHints="menu" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exercise_submitBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.Button"
        app:elevation="5dp"
        app:backgroundTint="@color/colorPurple"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />

</androidx.appcompat.widget.LinearLayoutCompat>