<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".GenderActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPurple"
            android:textSize="33sp"
            android:layout_marginBottom="30dp"
            android:text="@string/gender" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp">
        <ImageButton
            android:id="@+id/male_btn"
            android:backgroundTint="#00CCF8EC"
            android:layout_marginTop="40dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/male"/>
    </LinearLayout>

    <TextView
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#123456"
        android:layout_marginBottom="45dp"
        android:text="@string/male"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp">
        <ImageButton
            android:id="@+id/female_btn"
            android:backgroundTint="#00F0DEFF"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/female"/>
    </LinearLayout>

    <TextView
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#123456"
        android:layout_marginBottom="40dp"
        android:text="@string/female"/>




</androidx.appcompat.widget.LinearLayoutCompat>